force-app/main/default/objects/BuildApp_KPI__c/BuildApp_KPI__c.object-meta.xml
<CustomObject>
    <label>BuildApp営業KPI</label>
    <nameField>
        <displayFormat>BA {00000000}</displayFormat>
        <label>BuildApp営業KPI</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>