force-app/main/default/objects/BuildApp_KPI__c/fields/account__c.field-meta.xml
<CustomField>
    <fullName>account__c</fullName>
    <label>取引先</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>BuildApp営業KPI</relationshipLabel>
    <relationshipName>BuildApp_KPI</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>