force-app/main/default/objects/BuildApp_KPI__c/fields/baPastEngagement__c.field-meta.xml
<CustomField>
    <fullName>baPastEngagement__c</fullName>
    <label>BAでの過去接触・取組み</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>