force-app/main/default/objects/BuildApp_KPI__c/fields/bimPromotionIssuesCustomer__c.field-meta.xml
<CustomField>
    <fullName>bimPromotionIssuesCustomer__c</fullName>
    <label>顧客内BIM推進での問題</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>