force-app/main/default/objects/BuildApp_KPI__c/fields/bimPromotionIssuesCustomer_point__c.field-meta.xml
<CustomField>
    <fullName>bimPromotionIssuesCustomer_point__c</fullName>
    <label>配点_顧客内BIM推進での問題</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>