force-app/main/default/objects/BuildApp_KPI__c/fields/bimUsePatternClashCheck__c.field-meta.xml
<CustomField>
    <fullName>bimUsePatternClashCheck__c</fullName>
    <label>BIM活用パターン_干渉チェック・納まり</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>○</fullName>
            </value>
            <value>
                <fullName>×</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>