force-app/main/default/objects/BuildApp_KPI__c/fields/bimUsePatternConsensus__c.field-meta.xml
<CustomField>
    <fullName>bimUsePatternConsensus__c</fullName>
    <label>BIM活用パターン_合意形成</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>○</fullName>
            </value>
            <value>
                <fullName>×</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>