force-app/main/default/objects/BuildApp_KPI__c/fields/bimUsePatternShopDrawing_point__c.field-meta.xml
<CustomField>
    <fullName>bimUsePatternShopDrawing_point__c</fullName>
    <formula>IF(TEXT(bimUsePatternShopDrawing__c) &lt;&gt; &quot;&quot;, 0.6, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>配点_BIM活用パターン_施工図</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>