force-app/main/default/objects/BuildApp_KPI__c/fields/bimUsePhaseEquipment__c.field-meta.xml
<CustomField>
    <fullName>bimUsePhaseEquipment__c</fullName>
    <label>BIM利用工程_設備</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>○</fullName>
            </value>
            <value>
                <fullName>×</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>