force-app/main/default/objects/BuildApp_KPI__c/fields/bimUsePhaseEquipment_point__c.field-meta.xml
<CustomField>
    <fullName>bimUsePhaseEquipment_point__c</fullName>
    <formula>IF(TEXT(bimUsePhaseEquipment__c) &lt;&gt; &quot;&quot;, 0.375, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>配点_BIM利用工程_設備</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>