force-app/main/default/objects/BuildApp_KPI__c/fields/bimUsePhaseExterior_point__c.field-meta.xml
<CustomField>
    <fullName>bimUsePhaseExterior_point__c</fullName>
    <formula>IF(TEXT(bimUsePhaseExterior__c) &lt;&gt; &quot;&quot;, 0.375, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>配点_BIM利用工程_外装</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>