force-app/main/default/objects/BuildApp_KPI__c/fields/bimUsePhaseExteriorWork_point__c.field-meta.xml
<CustomField>
    <fullName>bimUsePhaseExteriorWork_point__c</fullName>
    <formula>IF(TEXT(bimUsePhaseExteriorWork__c) &lt;&gt; &quot;&quot;, 0.375, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>配点_BIM利用工程_外構</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>