force-app/main/default/objects/BuildApp_KPI__c/fields/bimUtilizationLevelPlan__c.field-meta.xml
<CustomField>
    <fullName>bimUtilizationLevelPlan__c</fullName>
    <label>BIMの活用レベル計画</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>