force-app/main/default/objects/BuildApp_KPI__c/fields/bimUtilizationLevelPlan_point__c.field-meta.xml
<CustomField>
    <fullName>bimUtilizationLevelPlan_point__c</fullName>
    <label>配点_BIMの活用レベル計画</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>