force-app/main/default/objects/BuildApp_KPI__c/fields/blockingPersonDeptAndName_point__c.field-meta.xml
<CustomField>
    <fullName>blockingPersonDeptAndName_point__c</fullName>
    <label>配点_障害となる人物有無_どの部門の誰か</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>