force-app/main/default/objects/BuildApp_KPI__c/fields/blockingPersonPreferences__c.field-meta.xml
<CustomField>
    <fullName>blockingPersonPreferences__c</fullName>
    <label>障害となる人物有無_それらの方の趣向</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>