force-app/main/default/objects/BuildApp_KPI__c/fields/blockingPersonPreferences_point__c.field-meta.xml
<CustomField>
    <fullName>blockingPersonPreferences_point__c</fullName>
    <label>配点_障害となる人物有無_それらの方の趣向</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>