force-app/main/default/objects/BuildApp_KPI__c/fields/constructionSalesFavBuilding__c.field-meta.xml
<CustomField>
    <fullName>constructionSalesFavBuilding__c</fullName>
    <label>建築売上、得意な建物</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>