force-app/main/default/objects/BuildApp_KPI__c/fields/currentBimCapabilityConstructionDept__c.field-meta.xml
<CustomField>
    <fullName>currentBimCapabilityConstructionDept__c</fullName>
    <label>現状のBIM作成能力_作成部門(施工BIM)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>