force-app/main/default/objects/BuildApp_KPI__c/fields/currentBimCapabilityDesignDept__c.field-meta.xml
<CustomField>
    <fullName>currentBimCapabilityDesignDept__c</fullName>
    <label>現状のBIM作成能力_作成部門(設計BIM)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>