force-app/main/default/objects/BuildApp_KPI__c/fields/currentBimCapabilityDesignDept_point__c.field-meta.xml
<CustomField>
    <fullName>currentBimCapabilityDesignDept_point__c</fullName>
    <formula>IF(NOT(ISBLANK(currentBimCapabilityDesignDept__c)), 0.75, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>配点_現状のBIM作成能力_作成部門(設計BIM)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>