force-app/main/default/objects/BuildApp_KPI__c/fields/currentBimCapabilityDesignProdType__c.field-meta.xml
<CustomField>
    <fullName>currentBimCapabilityDesignProdType__c</fullName>
    <label>現状のBIM作成能力_設計BIM(内製・外注)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>内製</fullName>
            </value>
            <value>
                <fullName>外注</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>