force-app/main/default/objects/BuildApp_KPI__c/fields/currentBimCapabilityDesignProdType_point__c.field-meta.xml
<CustomField>
    <fullName>currentBimCapabilityDesignProdType_point__c</fullName>
    <formula>IF(TEXT(currentBimCapabilityDesignProdType__c) &lt;&gt; &quot;&quot;, 0.75, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>配点_現状のBIM作成能力_設計BIM(内製・外注)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>