force-app/main/default/objects/BuildApp_KPI__c/fields/currentBimCreationConditions__c.field-meta.xml
<CustomField>
    <fullName>currentBimCreationConditions__c</fullName>
    <label>現状のBIM作成条件</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>