force-app/main/default/objects/BuildApp_KPI__c/fields/currentBimCreationConditions_point__c.field-meta.xml
<CustomField>
    <fullName>currentBimCreationConditions_point__c</fullName>
    <label>配点_現状のBIM作成条件</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>