force-app/main/default/objects/BuildApp_KPI__c/fields/customerOrgKeyPersonSubtotal__c.field-meta.xml
<CustomField>
    <fullName>customerOrgKeyPersonSubtotal__c</fullName>
    <formula>involvedOrgProcurementBim_point__c +
involvedOrgBusinessDept_point__c +
involvedOrgProductionDesign_point__c +
involvedRoleProcurementBim_point__c +
involvedRoleBusinessDept_point__c +
involvedRoleProductionDesign_point__c +
projectVendorDecisionProcess_point__c +
keyPersonOrgAndName_point__c +
keyPersonBaPromotionBarriers_point__c +
keyPersonPreferences_point__c +
hasBlockingPerson_point__c +
blockingPersonDeptAndName_point__c +
blockingPersonPreferences_point__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>顧客組織・キーマン_小計</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>