force-app/main/default/objects/BuildApp_KPI__c/fields/dxHighLevelPolicyGoal__c.field-meta.xml
<CustomField>
    <fullName>dxHighLevelPolicyGoal__c</fullName>
    <label>DX上位方針、目標</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>