force-app/main/default/objects/BuildApp_KPI__c/fields/dxHighLevelPolicyGoal_point__c.field-meta.xml
<CustomField>
    <fullName>dxHighLevelPolicyGoal_point__c</fullName>
    <label>配点_DX上位方針、目標</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>