force-app/main/default/objects/BuildApp_KPI__c/fields/dxPolicyPriority__c.field-meta.xml
<CustomField>
    <fullName>dxPolicyPriority__c</fullName>
    <label>DX方針優先度</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>