force-app/main/default/objects/BuildApp_KPI__c/fields/dxPolicyPriority_point__c.field-meta.xml
<CustomField>
    <fullName>dxPolicyPriority_point__c</fullName>
    <label>配点_DX方針優先度</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>