force-app/main/default/objects/BuildApp_KPI__c/fields/gcBaSimilarModelInitiatives__c.field-meta.xml
<CustomField>
    <fullName>gcBaSimilarModelInitiatives__c</fullName>
    <label>GC内でBAとの類似モデル取組み</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>○</fullName>
            </value>
            <value>
                <fullName>×</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>