force-app/main/default/objects/BuildApp_KPI__c/fields/hasBlockingPerson__c.field-meta.xml
<CustomField>
    <fullName>hasBlockingPerson__c</fullName>
    <label>障害となる人物有無_有無</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>○</fullName>
            </value>
            <value>
                <fullName>×</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>