force-app/main/default/objects/BuildApp_KPI__c/fields/hasBlockingPerson_point__c.field-meta.xml
<CustomField>
    <fullName>hasBlockingPerson_point__c</fullName>
    <formula>IF(TEXT(hasBlockingPerson__c) &lt;&gt; &quot;&quot;, 3, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>配点_障害となる人物有無_有無</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>