force-app/main/default/objects/BuildApp_KPI__c/fields/hasBusinessWithOurCompany__c.field-meta.xml
<CustomField>
    <fullName>hasBusinessWithOurCompany__c</fullName>
    <label>当社との取引有無</label>
    <length>255</length>
    <type>Text</type>
</CustomField>