force-app/main/default/objects/BuildApp_KPI__c/fields/hasConnectionWithOurNetwork__c.field-meta.xml
<CustomField>
    <fullName>hasConnectionWithOurNetwork__c</fullName>
    <label>当社人脈とのつながり有無</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>