force-app/main/default/objects/BuildApp_KPI__c/fields/hasRelatedPressReleaseSales__c.field-meta.xml
<CustomField>
    <fullName>hasRelatedPressReleaseSales__c</fullName>
    <label>営業で関連するプレスリリース有無</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>