force-app/main/default/objects/BuildApp_KPI__c/fields/interiorBimModelCountRatio__c.field-meta.xml
<CustomField>
    <fullName>interiorBimModelCountRatio__c</fullName>
    <label>内装施工BIMモデルの作成件数・割合</label>
    <length>255</length>
    <type>Text</type>
</CustomField>