force-app/main/default/objects/BuildApp_KPI__c/fields/interiorBimModelCountRatio_point__c.field-meta.xml
<CustomField>
    <fullName>interiorBimModelCountRatio_point__c</fullName>
    <formula>IF(NOT(ISBLANK(interiorBimModelCountRatio__c)), 3, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>配点_内装施工BIMモデルの作成件数・割合</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>