force-app/main/default/objects/BuildApp_KPI__c/fields/involvedOrgProcurementBim__c.field-meta.xml
<CustomField>
    <fullName>involvedOrgProcurementBim__c</fullName>
    <label>物件・業者決定への関与組織_調達・BIM(DX)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>○</fullName>
            </value>
            <value>
                <fullName>×</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>