force-app/main/default/objects/BuildApp_KPI__c/fields/involvedOrgProcurementBim_point__c.field-meta.xml
<CustomField>
    <fullName>involvedOrgProcurementBim_point__c</fullName>
    <formula>IF(TEXT(involvedOrgProcurementBim__c) &lt;&gt; &quot;&quot;, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>配点_物件・業者決定への関与組織_調達・BIM(DX)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>