force-app/main/default/objects/BuildApp_KPI__c/fields/involvedOrgProductionDesign_point__c.field-meta.xml
<CustomField>
    <fullName>involvedOrgProductionDesign_point__c</fullName>
    <formula>IF(TEXT(involvedOrgProductionDesign__c) &lt;&gt; &quot;&quot;, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>配点_物件・業者決定への関与組織_生産設計</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>