force-app/main/default/objects/BuildApp_KPI__c/fields/involvedRoleProductionDesign__c.field-meta.xml
<CustomField>
    <fullName>involvedRoleProductionDesign__c</fullName>
    <label>関与組織・人の役割や担当_生産設計</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>○</fullName>
            </value>
            <value>
                <fullName>×</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>