force-app/main/default/objects/BuildApp_KPI__c/fields/involvedRoleProductionDesign_point__c.field-meta.xml
<CustomField>
    <fullName>involvedRoleProductionDesign_point__c</fullName>
    <formula>IF(TEXT(involvedRoleProductionDesign__c) &lt;&gt; &quot;&quot;, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>配点_関与組織・人の役割や担当_生産設計</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>