force-app/main/default/objects/BuildApp_KPI__c/fields/keyPersonBaPromotionBarriers__c.field-meta.xml
<CustomField>
    <fullName>keyPersonBaPromotionBarriers__c</fullName>
    <label>関与組織のキーマン_BA推進の障壁有無やその内容</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>