force-app/main/default/objects/BuildApp_KPI__c/fields/keyPersonBaPromotionBarriers_point__c.field-meta.xml
<CustomField>
    <fullName>keyPersonBaPromotionBarriers_point__c</fullName>
    <label>配点_関与組織のキーマン_BA推進の障壁有無やその内容</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>