force-app/main/default/objects/BuildApp_KPI__c/fields/keyPersonOrgAndName__c.field-meta.xml
<CustomField>
    <fullName>keyPersonOrgAndName__c</fullName>
    <label>関与組織のキーマン_どの組織の誰か</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>