force-app/main/default/objects/BuildApp_KPI__c/fields/keyPersonOrgAndName_point__c.field-meta.xml
<CustomField>
    <fullName>keyPersonOrgAndName_point__c</fullName>
    <label>配点_関与組織のキーマン_どの組織の誰か</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>