force-app/main/default/objects/BuildApp_KPI__c/fields/keyPersonPreferences__c.field-meta.xml
<CustomField>
    <fullName>keyPersonPreferences__c</fullName>
    <label>関与組織のキーマン_それらの方の趣向</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>