force-app/main/default/objects/BuildApp_KPI__c/fields/keyPersonPreferences_point__c.field-meta.xml
<CustomField>
    <fullName>keyPersonPreferences_point__c</fullName>
    <label>配点_関与組織のキーマン_それらの方の趣向</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>