force-app/main/default/objects/BuildApp_KPI__c/fields/KPI__c.field-meta.xml
<CustomField>
    <fullName>KPI__c</fullName>
    <formula>customerDxBimInfoSubtotal__c  +  customerOrgKeyPersonSubtotal__c  +  projectListAcquisition_point__c  +  tradeVendorList_point__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>KPI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>