force-app/main/default/objects/BuildApp_KPI__c/fields/projectListAcquisition_point__c.field-meta.xml
<CustomField>
    <fullName>projectListAcquisition_point__c</fullName>
    <formula>IF(TEXT(projectListAcquisition__c) &lt;&gt; &quot;&quot;, 20, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>配点_物件リスト取得</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>