force-app/main/default/objects/BuildApp_KPI__c/fields/projectVendorDecisionProcess__c.field-meta.xml
<CustomField>
    <fullName>projectVendorDecisionProcess__c</fullName>
    <label>物件・業者決定プロセス</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>