force-app/main/default/objects/BuildApp_KPI__c/fields/projectVendorDecisionProcess_point__c.field-meta.xml
<CustomField>
    <fullName>projectVendorDecisionProcess_point__c</fullName>
    <label>配点_物件・業者決定プロセス</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>