force-app/main/default/objects/BuildApp_KPI__c/fields/tradeVendorList_point__c.field-meta.xml
<CustomField>
    <fullName>tradeVendorList_point__c</fullName>
    <formula>IF(TEXT(tradeVendorList__c) &lt;&gt; &quot;&quot;, 20, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>配点_工種業者(今は内装工事店)リスト</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>